--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="baby_blue">#B7D0E0</color>
+    <color name="white">#FFFFFF</color>
     <color name="color_best_tip">#35BA01</color>
     <color name="color_worst_tip">#DC1E0B</color>
 </resources>
