--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Base.Theme.TipCalculator" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name ="android:colorBackground">@color/baby_blue</item>
+        <item name ="android:colorBackground">@color/white</item>
         <item name ="android:textColor">@color/black</item>
     </style>
 
