--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textStyle="bold"
         android:textColor="?android:textColorPrimary"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
         app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel"
         tools:text="24%" />
@@ -36,7 +36,7 @@
         android:id="@+id/tvTipLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         android:text="Tip:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="?android:textColorPrimary"
@@ -63,8 +63,8 @@
         android:ems="8"
         android:hint="Bill Amount"
         android:inputType="numberDecimal"
-        android:textSize="24sp"
         android:textColor="?android:textColorPrimary"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
         app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
         app:layout_constraintTop_toTopOf="@+id/tvBaseLabel"
@@ -111,22 +111,11 @@
         android:fontFamily="sans-serif-condensed-light"
         android:text="Made by Ayden 🐢"
         android:textAllCaps="true"
-        android:textColor="?android:textColorPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tvTipDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="?android:textColorPrimary"
-        app:layout_constraintEnd_toEndOf="@+id/seekBarTip"
-        app:layout_constraintStart_toStartOf="@+id/seekBarTip"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarTip"
-        tools:text="Acceptable" />
 
     <TextView
         android:id="@+id/tvSplit"
@@ -134,8 +123,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Split:"
-        android:textColor="?android:textColorPrimary"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintEnd_toEndOf="@+id/tvTotal"
         app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
 
@@ -238,5 +227,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_preferences" />
+
+    <Button
+        android:id="@+id/btPreset15"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="8dp"
+        android:text="15%"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTipPercentLabel" />
+
+    <Button
+        android:id="@+id/btPreset18"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:text="18%"
+        app:layout_constraintBottom_toBottomOf="@+id/btPreset15"
+        app:layout_constraintStart_toEndOf="@+id/btPreset15"
+        app:layout_constraintTop_toTopOf="@+id/btPreset15" />
+
+    <Button
+        android:id="@+id/btPreset20"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:text="20%"
+        app:layout_constraintBottom_toBottomOf="@+id/btPreset18"
+        app:layout_constraintStart_toEndOf="@+id/btPreset18"
+        app:layout_constraintTop_toTopOf="@+id/btPreset18" />
+
+    <Button
+        android:id="@+id/btPreset23"
+        android:layout_width="75dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="44dp"
+        android:text="23%"
+        app:layout_constraintBottom_toBottomOf="@+id/btPreset20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btPreset20"
+        app:layout_constraintTop_toTopOf="@+id/btPreset20" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
